multicontainer-helm/labs/expense-service/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"postgresql:10-el8","namespace":"openshift"},"fieldPath":"spec.template.spec.containers[?(@.name==\"postgresql\")].image"}]'
  labels:
    app: postgresql
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/instance: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: postgresql
  strategy: {}
  template:
    metadata:
      labels:
        deployment: postgresql
    spec:
      containers:
      - env:
          - name: POSTGRESQL_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: postgresql
          - name: POSTGRESQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: postgresql
          - name: POSTGRESQL_DATABASE
            valueFrom:
              secretKeyRef:
                key: database-name
                name: postgresql
        image: ' '
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        volumeMounts:
          - mountPath: /var/lib/pgsql/data
            name: postgresql-data
      volumes:
        - emptyDir: {}
          name: postgresql-data
