multicontainer-helm/labs/expense-service/templates/expense-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: expense-service
    app.kubernetes.io/component: expense-service
    app.kubernetes.io/instance: expense-service
  name: expense-service
spec:
  host: expense-service.apps.ocp4.example.com
  port:
    targetPort: http
  to:
    kind: ""
    name: expense-service
